Update path for test-results.xml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,4 +17,5 @@ jobs:
             source $BASH_ENV
             gem install bundler
       - store_test_results:
-          path: test-results
+          path: /test-results/rspec
+          destination: rspec
