--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,8 @@ jobs:
             echo 'export BUNDLER_VERSION=$(cat Gemfile.lock | tail -1 | tr -d " ")' >> $BASH_ENV
             source $BASH_ENV
       - store_test_results:
-          command: bundle exec rspec
+          script:
+            - bundle exec rails db:{create,migrate} RAILS_ENV=test
+            - bundle exec rspec
           path: test-results/rspec
           destination: results.xml
