--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ addons:
   postgresql: 9.6
 script:
 - bundle exec rails db:{create,migrate} RAILS_ENV=test
-- bundle exec rspec
+- bundle exec rspec -fd
 deploy:
   provider: heroku
   api_key:
