--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,7 @@ AllCops:
     - 'tmp/**/*'
     - 'vendor/**/*'
     - './*'
+  NewCops: enable
 
 Style/FrozenStringLiteralComment:
   Enabled: false
@@ -27,8 +28,38 @@ Style/ClassAndModuleChildren:
 Style/SafeNavigation:
   Enabled: false
 
+Style/GuardClause:
+  Enabled: false
+
+Style/NegatedIf:
+  Enabled: false
+
+Style/IfUnlessModifier:
+  Enabled: false
+
 Metrics/AbcSize:
   Enabled: false
 
+Metrics/MethodLength:
+  Enabled: false
+
+Layout/LineLength:
+  Enabled: false
+
+Layout/MultilineMethodCallIndentation:
+  Enabled: false
+
 Rails/UniqueValidationWithoutIndex:
+  Enabled: false
+
+Rails/TimeZone:
+  Enabled: false
+
+Rails/WhereEquals:
+  Enabled: false
+
+Rails/WhereNot:
+  Enabled: false
+
+Rails/Delegate:
   Enabled: false
